# IronPanel

./: .env.example  .gitignore  Cargo.toml  Makefile.toml
ipanel-config/: Cargo.toml
ipanel-deamon/: Cargo.toml
ipanel-domain/: Cargo.toml
ipanel-domain/src/config/: application.rs
ipanel-domain/src/models/: auth.rs  date.rs  domain.rs  group.rs  job.rs  log.rs  mod.rs  user.rs
ipanel-dtos/: Cargo.toml
ipanel-gui/: Cargo.toml  Dioxus.toml
ipanel-gui/assets/: main.css
ipanel-gui/src/: main.rs  router.rs
ipanel-repositories/: Cargo.toml
ipanel-repositories/src/: lib.rs
ipanel-repositories/src/auth/: mod.rs  surrealdb.rs
ipanel-repositories/src/impls/surrealdb/: auth.rs  domain.rs  dtos.rs  group.rs  job.rs  log.rs  mod.rs  user.rs
ipanel-repositories/src/interfaces/: auth.rs  domain.rs  group.rs  job.rs  log.rs  mod.rs  user.rs
ipanel-server/: Cargo.toml
ipanel-server/src/: app.rs  main.rs
ipanel-server/src/actions/: auth.rs
ipanel-services/: Cargo.toml
ipanel-services/src/: lib.rs
ipanel-services/src/auth/: get_auths.rs  get_auths_by_user.rs  mod.rs
ipanel-services/src/auth/get_auths/: impls.rs  mod.rs
ipanel-services/src/config/: application_provider.rs  mod.rs
ipanel-services/src/config/application_provider/: impls.rs  mod.rs
ipanel-services/src/database/: db_provider.rs  mod.rs
ipanel-services/src/database/db_provider/: impls.rs  mod.rs
