[workspace]
resolver = "2"
members = [
  "ipanel-deamon",
  "ipanel-domain",
  "ipanel-dtos",
  "ipanel-gui",
  "ipanel-repositories",
  "ipanel-server",
  "ipanel-services",
]

[workspace.dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
dtos = { path = "./ipanel-dtos" }
ipanel-config = { path = "./ipanel-config" }
ipanel-domain = { path = "./ipanel-domain" }
ipanel-repositories = { path = "./ipanel-repositories" }
ipanel-services = { path = "./ipanel-services" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
surrealdb = { version = "3", features = ["rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["js", "serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = 0
codegen-units = 256
