[package]
name = "ipanel-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
ipanel-domain = { workspace = true }
ipanel-repositories = { workspace = true }
ipanel-services = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }
